--- a/package.json
+++ b/package.json
@@ -18,12 +18,19 @@
     "@typescript-eslint/parser": "^5.9.1",
     "@vitejs/plugin-react": "^1.0.7",
     "eslint": "^8.6.0",
+    "eslint-config-react-app": "^7.0.0",
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
     "prettier": "2.5.1",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "prettier"
+    ]
   },
   "husky": {
     "hooks": {
