--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "xd-react",
+  "name": "ljl-react",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -8,6 +8,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "antd": "^4.18.3",
+    "axios": "^0.24.0",
+    "less": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
